# Labyrinths_Generator_and_Solver

./: .gitignore  CMakeLists.txt  Makefile  README.md  maze.icns  maze_model.gcda  maze_model.gcno  reference.html  reference_rus.html  resource.qrc  test.gcda  test.gcno  tests  tests.gcda  tests.gcno
src/: main.cc
src/controller/: maze_controller.h
src/google_tests/: maze3x3.txt  maze_unsolved.txt  test.cc  test.txt  test_wrong.txt  tests.cc
src/helpers/: data_objects.h
src/model/: a.out  maze.txt  maze3x3.txt  maze_model.cc  maze_model.h  maze_unsolved.txt  test.cc
src/view/: maze_window.cc  maze_window.h  maze_window.ui
